--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ authors = [
 dependencies = [
     "fastapi>=0.114.1",
     "uvicorn[standard]>=0.30.6",
+    "PyMySQL>=1.1.1",
+    "python-multipart>=0.0.9",
+    "pytz>=2024.2",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
