--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "PyMySQL>=1.1.1",
     "python-multipart>=0.0.9",
     "pytz>=2024.2",
+    "SWjigeum>=0.3.0",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
