pred suc, manifest add

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,25 @@ description = "mnist"
 authors = [
     {name = "GITSangWoo", email = "dogcenta@gmail.com"},
 ]
+
 dependencies = [
     "fastapi>=0.114.1",
     "uvicorn[standard]>=0.30.6",
     "PyMySQL>=1.1.1",
-    "python-multipart>=0.0.9",
     "pytz>=2024.2",
+    "pillow>=10.4.0",
+    "python-multipart>=0.0.9",
+    "tensorflow>=2.17.0",
+    "keras>=3.5.0",
+    "matplotlib>=3.9.2",
+    "scikit-learn>=1.5.2",
+    "scikit-image>=0.24.0",
+    "opencv-python>=4.10.0.84",
+    "pydot>=3.0.1",
     "SWjigeum>=0.3.0",
     "requests>=2.32.3",
 ]
+
 requires-python = ">=3.11"
 readme = "README.md"
 license = {text = "GNU"}
@@ -27,3 +37,11 @@ ml-worker = 'mnist.worker:run'
 
 [tool.pdm]
 distribution = true
+
+[tool.pytest.ini_options]
+pythonpath=["src"]
+
+[tool.pdm.dev-dependencies]
+note = [
+    "notebook>=7.2.2",
+]
